using System.Collections;
using System.Collections.Generic;
using UnityEngine;


public static class DC
{
   public static int sO_P = 1;
   public static int sO_PN = 2;
   public static int sO_N = 3;
   public static int sO_SN = 4;
   public static int sO_S = 5;
   public static int sO_SM = 6;
   public static int sO_M = 7;
   public static int sO_PM = 8;
   public static int sD = 9;
   public static int sU = 10;

   public static int mU = 17;
   public static int mD = 18;
   public static int mR = 19;
   public static int mL = 20;
   public static int dU = 21;
   public static int dD = 22;
   public static int rA_CW = 23;
   public static int rA_CCW = 24;

   public static int s=0;
   public static int mE=1;
   public static int mF=2;
   public static int err=3;
}
